# peace-security-test-area-backends

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/: GITHUB-MCP-SETUP.md
.cursor/rules/: general.mdc  github-mcp-workflow.mdc  tests.mdc
.github/workflows/: check-encoding.yml  ci.yml
infra/docker/: Dockerfile  init-dbs.sql
services/executive/: manage.py
services/executive/exec/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  views.py
services/executive/executive/: asgi.py  settings.py  urls.py  wsgi.py
services/executive/tests/: __init__.py  test_evaluations_api.py  test_exec_proposals_api.py
services/judiciary/: manage.py
services/judiciary/approvals/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
services/judiciary/judiciary/: asgi.py  settings.py  urls.py  wsgi.py
services/legislative/: manage.py
services/legislative/laws/: __init__.py  admin.py  apps.py  models.py  services.py
services/legislative/legislative/: asgi.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
services/legislative/tests/: test_laws_api.py  test_laws_proposals_api.py
services/root/: manage.py
shared/: __init__.py
shared/audit/: __init__.py
shared/auth/: __init__.py  apps.py  jwt.py  middleware.py  permissions.py  scopes.py  service_identity.py
shared/common_schemas/: __init__.py
shared/ids/: __init__.py
shared/laws/: __init__.py  apps.py  models.py
shared/proposals/: __init__.py  apps.py  common.py  models.py
(+58 files in other folders)
