[tool.poetry]
name = "peace-security-test-area-backends"
version = "0.1.0"
description = "平和保障試験区バックエンド群（4 Django プロジェクト + shared）"
readme = "README.md"
authors = ["voidkyun <voidkyun@users.noreply.github.com>"]
packages = [{ include = "shared" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
